--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@
 *.bak
 phonebook_opt
 phonebook_orig
+phonebook_hash_avl_opt
 calculate
 orig.txt
 opt.txt
 output.txt
+hash_avl_opt.txt
 runtime.png
